Add openapi dependencies